--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,18 @@
         "php": "^7.2",
         "barryvdh/laravel-debugbar": "^3.5",
         "fideloper/proxy": "^4.0",
+        "google/cloud": "^0.163.1",
+        "google/cloud-error-reporting": "^0.18.3",
+        "google/cloud-logging": "^1.21",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "nunomaduro/collision": "^3.0"
     },
     "require-dev": {
-        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
+        
         "phpunit/phpunit": "^8.0"
     },
     "config": {
@@ -58,6 +61,10 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "post-install-cmd": [
+            "chmod -R 755 bootstrap\/cache",
+            "php artisan cache:clear"
+        ] 
     }
 }
